welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:5: error: ';' expected but 'else' found.
else while (vacation==true) {
^