welcome.lessons.welcome.bat.bool1.SleepIn.scala.code
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {
while (weekday==false) {
	return true
}
else while (vacation==true) {
	return true
}

}
